2005-09-07  Tim Jenness  <tjenness@cpan.org>

	* AST.xs: Add astTranP support. 

	* arrays.c: Add nelem1D function to easily count size of input array
	regardless of ref to AV vs glob
	
2005-09-06  Tim Jenness  <tjenness@cpan.org>

	* AST.pm (PickAxes): Now uses context to determine whether just
	the frame or both the frame and mapping should be returned (scalar
	or list context).

	* AST.xs: Add AST__CURRENT, AST__BASE and AST__NOFRAME constants.

	* AST.xs: PickAxes now always returns the new frame and the mapping.

2005-09-01  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* AST.pm: Add hooks for Storable to allow deep cloning of
	Starlink::AST objects via dclone().

2005-03-04  Tim Jenness  <tjenness@cpan.org>

	* Tk/Tk.pm: Extensive rewrite. Now mostly works and is consistent
	with the PGPLOT equivalent. Tk can not support rotated text.

2005-02-04  Tim Jenness  <timj@jach.hawaii.edu>

	* AST.xs: Fix return value when methods return null Ast objects.

2005-02-03  Tim Jenness  <timj@jach.hawaii.edu>

	* AST.xs: Fix Channel and XmlChan source functions. Sometimes the
	source function is triggered after object constructor.

2004-12-29  Tim Jenness  <timj@jach.hawaii.edu>

	---- RELEASE v0.03 to CPAN ----

	* AST.xs: Add Region support (including Box, Circle and Ellipse)
	
	* AST.xs: Support astPutCards if available

	* AST.xs: Add astEscapes

	* AST.xs: Add RateMap constructor
	
	* AST.xs: Add FluxFrame and SpecFluxFrame constructors

2004-12-28  Tim Jenness  <tjenness@cpan.org>

	* Begin synchronizing with AST v3.5

	* AST.xs: Add astKeyMap functions and constants

	* t/keymap.t: Add tests for astKeyMap
	
	* AST.xs: Allow module to compile with both variants of astRate.
          Now only returns the second derivative if the version of astRate
          supports that.

	* AST.xs: astSetFits<X> methods for FitsChan

	* AST_ERR.xsh: Add new status codes: AST__REGIN, AST__BADOC,
	AST__MPGER, AST__MPIND